--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Tivler/RoadToHire-ish/issues"
   },
-  "homepage": "https://github.com/Tivler/RoadToHire-ish#readme"
+  "homepage": "https://github.com/Tivler/RoadToHire-ish#readme",
+  "dependencies": {
+    "animate.css": "^3.7.0"
+  }
 }
