--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/Tivler/RoadToHire-ish/issues"
   },
   "homepage": "https://github.com/Tivler/RoadToHire-ish#readme",
-  "dependencies": {
-    "animate.css": "^3.7.0"
-  }
+  "dependencies": {}
 }
